--- a/DistributedProcessing/PartitionerService/PartitionerService.fsproj
+++ b/DistributedProcessing/PartitionerService/PartitionerService.fsproj
@@ -32,19 +32,33 @@
     <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Functions.ps1" Link="Functions.ps1" Pack="true" PackagePath="\">
+
+    <None Include="..\..\Scripts\Install-DistributedService.ps1" Link="Install-DistributedService.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="PartitionerVersionInfo.ps1" Pack="true" PackagePath="\">
+    <None Include="..\..\Scripts\Uninstall-DistributedService.ps1" Link="Uninstall-DistributedService.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="PartitionerServiceName.ps1" Pack="true" PackagePath="\">
+    <None Include="..\..\Scripts\Start-DistributedService.ps1" Link="Start-DistributedService.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Scripts\Stop-DistributedService.ps1" Link="Stop-DistributedService.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\Scripts\Write-ServiceLog.ps1" Link="Write-ServiceLog.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+
+    <None Include="Install-PartitionerService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="PartitionerFunctions.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Install-PartitionerService.ps1" Pack="true" PackagePath="\">
+    <None Include="PartitionerServiceName.ps1" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="PartitionerVersionInfo.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Start-PartitionerService.ps1" Pack="true" PackagePath="\">
