--- a/DistributedProcessing/PartitionerService/PartitionerService.fsproj
+++ b/DistributedProcessing/PartitionerService/PartitionerService.fsproj
@@ -33,57 +33,57 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 
-    <None Include="..\..\Sys\BuildInfo.ps1" Link="BuildInfo.ps1">
+    <None Include="..\..\Sys\BuildInfo.ps1" Link="BuildInfo.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 
-    <None Include="..\..\Scripts\Get-BinaryPathName.ps1" Link="Get-BinaryPathName.ps1">
+    <None Include="..\..\Scripts\Get-BinaryPathName.ps1" Link="Get-BinaryPathName.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Get-Description.ps1" Link="Get-Description.ps1">
+    <None Include="..\..\Scripts\Get-Description.ps1" Link="Get-Description.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Get-ServiceName.ps1" Link="Get-ServiceName.ps1">
+    <None Include="..\..\Scripts\Get-ServiceName.ps1" Link="Get-ServiceName.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Install-DistributedService.ps1" Link="Install-DistributedService.ps1">
+    <None Include="..\..\Scripts\Install-DistributedService.ps1" Link="Install-DistributedService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Reinstall-WindowsService.ps1" Link="Reinstall-WindowsService.ps1">
+    <None Include="..\..\Scripts\Reinstall-WindowsService.ps1" Link="Reinstall-WindowsService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Start-DistributedService.ps1" Link="Start-DistributedService.ps1">
+    <None Include="..\..\Scripts\Start-DistributedService.ps1" Link="Start-DistributedService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Start-WindowsService.ps1" Link="Start-WindowsService.ps1">
+    <None Include="..\..\Scripts\Start-WindowsService.ps1" Link="Start-WindowsService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Stop-DistributedService.ps1" Link="Stop-DistributedService.ps1">
+    <None Include="..\..\Scripts\Stop-DistributedService.ps1" Link="Stop-DistributedService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Stop-WindowsService.ps1" Link="Stop-WindowsService.ps1">
+    <None Include="..\..\Scripts\Stop-WindowsService.ps1" Link="Stop-WindowsService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Uninstall-DistributedService.ps1" Link="Uninstall-DistributedService.ps1">
+    <None Include="..\..\Scripts\Uninstall-DistributedService.ps1" Link="Uninstall-DistributedService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Uninstall-ServiceWithScExe.ps1" Link="Uninstall-ServiceWithScExe.ps1">
+    <None Include="..\..\Scripts\Uninstall-ServiceWithScExe.ps1" Link="Uninstall-ServiceWithScExe.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Uninstall-ServiceWithWMI.ps1" Link="Uninstall-ServiceWithWMI.ps1">
+    <None Include="..\..\Scripts\Uninstall-ServiceWithWMI.ps1" Link="Uninstall-ServiceWithWMI.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Uninstall-ServiceWithDotNet.ps1" Link="Uninstall-ServiceWithDotNet.ps1">
+    <None Include="..\..\Scripts\Uninstall-ServiceWithDotNet.ps1" Link="Uninstall-ServiceWithDotNet.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Uninstall-WindowsService.ps1" Link="Uninstall-WindowsService.ps1">
+    <None Include="..\..\Scripts\Uninstall-WindowsService.ps1" Link="Uninstall-WindowsService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\Scripts\Write-ServiceLog.ps1" Link="Write-ServiceLog.ps1">
+    <None Include="..\..\Scripts\Write-ServiceLog.ps1" Link="Write-ServiceLog.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 
-    <None Include="..\MessagingService\MessagingVersionInfo.ps1" Link="MessagingVersionInfo.ps1">
+    <None Include="..\MessagingService\MessagingVersionInfo.ps1" Link="MessagingVersionInfo.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Install-PartitionerService.ps1" Pack="true" PackagePath="\">
@@ -104,7 +104,7 @@
     <None Include="Uninstall-PartitionerService.ps1" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Content Include="appsettings.json">
+    <Content Include="appsettings.json" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="..\..\log4net.config" Link="log4net.config">
