--- a/Samples/DistrProc/Core/Core.fsproj
+++ b/Samples/DistrProc/Core/Core.fsproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
         <Compile Include="Primitives.fs" />
+        <Compile Include="ExtendedLotkaVolterra.fs" />
     </ItemGroup>
 
     <ItemGroup>
