--- a/Samples/DistrProc/Core/Core.fsproj
+++ b/Samples/DistrProc/Core/Core.fsproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\DistributedProcessing\Core\Core.fsproj" />
+        <ProjectReference Include="..\..\..\Math\Math.fsproj" />
     </ItemGroup>
 
     <ItemGroup>
