--- a/DistributedProcessing/SolverRunner/SolverRunner.fsproj
+++ b/DistributedProcessing/SolverRunner/SolverRunner.fsproj
@@ -8,8 +8,8 @@
     <Authors>Konstantin Konstantinov</Authors>
     <Company>Softellect Systems, Inc.</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>9.0.300.37</Version>
-    <PackageVersion>9.0.300.37</PackageVersion>
+    <Version>9.0.300.38</Version>
+    <PackageVersion>9.0.300.38</PackageVersion>
     <Description>Softellect Solver Runner ...</Description>
     <PackageTags>client;server;framework</PackageTags>
     <RepositoryUrl>https://github.com/kkkmail/Softellect</RepositoryUrl>
@@ -39,6 +39,7 @@
     <Compile Include="NoSql.fs" />
     <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
     <Compile Include="OdeSolver.fs" />
+    <Compile Include="PoissonSolver.fs" />
     <Compile Include="Runner.fs" />
     <Compile Include="Implementation.fs" />
     <Compile Include="Program.fs" />
