--- a/Vpn/ClientAdm/ClientAdm.fsproj
+++ b/Vpn/ClientAdm/ClientAdm.fsproj
@@ -28,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="appsettings.json">
+        <Content Include="..\VpnClient\appsettings.json" Link="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
