--- a/Vpn/VpnClient/appsettings.json
+++ b/Vpn/VpnClient/appsettings.json
@@ -9,7 +9,7 @@
   },
   "appSettings": {
     "ProjectName": "VpnClient",
-    "VpnClientAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=YOUR_SERVER_IP;netTcpServicePort=5080;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
+    "VpnClientAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45080;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
     "VpnClientId": "{00000000-0000-0000-0000-000000000000}",
     "ClientKeyPath": "C:\\Keys\\VpnClient",
     "ServerPublicKeyPath": "C:\\Keys\\VpnServer.pkx",
