--- a/Vpn/VpnServer/appsettings.json
+++ b/Vpn/VpnServer/appsettings.json
@@ -9,7 +9,7 @@
   },
   "appSettings": {
     "ProjectName": "VpnServer",
-    "VpnServerAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=0.0.0.0;netTcpServicePort=5080;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
+    "VpnServerAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=120.0.0.1;netTcpServicePort=45080;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
     "VpnSubnet": "10.66.77.0/24",
     "ServerKeyPath": "C:\\Keys\\VpnServer",
     "ClientKeysPath": "C:\\Keys\\VpnClients"
