--- a/Vpn/VpnClient/VpnClient.fsproj
+++ b/Vpn/VpnClient/VpnClient.fsproj
@@ -35,6 +35,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="..\..\Scripts\*.ps1" Link="%(Filename)%(Extension)">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Include="VpnClientName.ps1">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
@@ -51,6 +54,9 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Include="Stop-VpnClient.ps1">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="Reinstall-VpnClient.ps1">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
