--- a/Vpn/VpnServer/VpnServer.fsproj
+++ b/Vpn/VpnServer/VpnServer.fsproj
@@ -35,6 +35,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="..\..\Scripts\*.ps1" Link="%(Filename)%(Extension)">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Include="VpnServerName.ps1">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
@@ -51,6 +54,9 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Include="Stop-VpnServer.ps1">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="Reinstall-VpnServer.ps1">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
