--- a/Vpn/VpnClient/appsettings.json
+++ b/Vpn/VpnClient/appsettings.json
@@ -11,8 +11,9 @@
     "ProjectName": "VpnClient",
     "VpnClientAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45080;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
     "VpnClientId": "{00000000-0000-0000-0000-000000000000}",
+    "VpnServerId": "{00000000-0000-0000-0000-000000000000}",
     "ClientKeyPath": "C:\\Keys\\VpnClient",
-    "ServerPublicKeyPath": "C:\\Keys\\VpnServer.pkx",
+    "ServerPublicKeyPath": "C:\\Keys\\VpnServer",
     "LocalLanExclusions": "192.168.0.0/16;10.0.0.0/8;172.16.0.0/12;169.254.0.0/16;127.0.0.0/8"
   }
 }
