--- a/Vpn/VpnServer/appsettings.json
+++ b/Vpn/VpnServer/appsettings.json
@@ -10,6 +10,7 @@
   "appSettings": {
     "ProjectName": "VpnServer",
     "VpnServerAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=120.0.0.1;netTcpServicePort=45080;netTcpServiceName=VpnService;netTcpSecurityMode=NoSecurity",
+    "VpnServerId": "{00000000-0000-0000-0000-000000000000}",
     "VpnSubnet": "10.66.77.0/24",
     "ServerKeyPath": "C:\\Keys\\VpnServer",
     "ClientKeysPath": "C:\\Keys\\VpnClients"
