--- a/Vpn/VpnClient/log4net.config
+++ b/Vpn/VpnClient/log4net.config
@@ -1,24 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <log4net>
-    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-        <file value="Logs\VpnClient.log" />
-        <appendToFile value="true" />
-        <rollingStyle value="Size" />
-        <maxSizeRollBackups value="10" />
-        <maximumFileSize value="10MB" />
-        <staticLogFileName value="true" />
-        <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
-        </layout>
-    </appender>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-        <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
-        </layout>
-    </appender>
-    <root>
-        <level value="ALL" />
-        <appender-ref ref="RollingFileAppender" />
-        <appender-ref ref="ConsoleAppender" />
-    </root>
+  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+    <file type="log4net.Util.PatternString" value="C:\Logs\%property{ProjectName}\" />
+    <appendToFile value="true" />
+    <rollingStyle value="Date" />
+    <datePattern value="yyyy-MM-dd'.log'" />
+    <staticLogFileName value="false" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="# %date{yyyy-MM-dd HH:mm:ss.fff} # %-5level # %message %newline%newline" />
+    </layout>
+  </appender>
+  <root>
+    <level value="ALL" />
+    <appender-ref ref="RollingFileAppender" />
+  </root>
 </log4net>
