--- a/Vpn/VpnServer/VpnServer.fsproj
+++ b/Vpn/VpnServer/VpnServer.fsproj
@@ -70,6 +70,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.8" />
+        <ProjectReference Include="..\ServerAdm\ServerAdm.fsproj" />
         <ProjectReference Include="..\Server\Server.fsproj" />
         <PackageReference Update="FSharp.Core" Version="9.0.303" />
     </ItemGroup>
