--- a/Vpn/Server/Server.fsproj
+++ b/Vpn/Server/Server.fsproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ClientRegistry.fs" />
+    <Compile Include="Nat.fs" />
     <Compile Include="PacketRouter.fs" />
     <Compile Include="Service.fs" />
     <Compile Include="Program.fs" />
